--- a/web/index.html
+++ b/web/index.html
@@ -66,7 +66,9 @@
                 </div>
                 <div class="card-action">
                   <a href="#">edit</a>
+                  <a href="#">delete</a>
                 </div>
+
               </div>
             </div>
           </div>
@@ -82,7 +84,7 @@
               <label for="first_name">Title</label>
             </div>
             <div class="input-field col s12">
-                <textarea placeholder="Enter message" id="textarea1" class="materialize-textarea" data-length="120"></textarea>
+                <textarea placeholder="Enter message" id="textarea1" class="materialize-textarea" data-length="200"></textarea>
                 <label for="textarea1">Textarea</label>
             </div>
 
